--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <script src="https://unpkg.com/vue"></script>
-  <script src="./rc-dropdown.js"></script>
+  <script src="https://unpkg.com/@vagrantir/rc-dropdown"></script>
 
   <rc-dropdown></rc-dropdown>
 </body>
