--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link src="https://unpkg.com/@vagrantir/rc-dropdown" rel="stylesheet"></link>
   <title>rc-dropdown</title>
 </head>
 
