--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link src="https://unpkg.com/@vagrantir/rc-dropdown" rel="stylesheet"></link>
   <title>rc-dropdown</title>
 </head>
 
@@ -16,10 +15,10 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-  <script src="https://unpkg.com/vue"></script>
-  <script src="https://unpkg.com/@vagrantir/rc-dropdown"></script>
+  <!--<script src="https://unpkg.com/vue"></script>-->
+  <!--<script src="https://unpkg.com/@vagrantir/rc-dropdown"></script>-->
 
-  <rc-dropdown></rc-dropdown>
+  <!--<rc-dropdown></rc-dropdown>-->
 </body>
 
 </html>
